# auditchain

./: .env.example  .gitignore  Dockerfile.backend  LICENSE  Makefile  README.md  docker-compose.prod.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: architecture.md
docs/adrs/: 001-multi-agent-architecture.md  002-pgvector-over-external-vector-db.md  003-sse-over-websocket.md  004-deterministic-risk-scoring.md  005-pydantic-submit-tool-pattern.md
docs/screenshots/: README.md
frontend/: Dockerfile  components.json  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/audits/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/audit/: add-company-card.tsx  add-company-modal.tsx  audit-header.tsx  companies-grid.tsx  company-card.tsx  completed-phases.tsx  current-phase-panel.tsx  pipeline-visual.tsx
frontend/src/components/audit-history/: audit-history-list.tsx
frontend/src/components/auth/: login-form.tsx  user-table.tsx
frontend/src/components/dashboard/: conclusions-donut-chart.tsx  dashboard-section.tsx  kpi-card.tsx  kpi-grid.tsx  recent-audits-chart.tsx  (+1 more)
frontend/src/hooks/: use-audit-stream.ts  use-inactivity-logout.ts  use-ingestion-stream.ts
frontend/src/lib/: build-phases-from-detail.ts  dashboard-metrics.ts  sec-companies.ts  utils.ts
frontend/src/types/: audit.ts  ingestion.ts
infra/docker/: docker-compose.yml
infra/sql/: 001_init.sql  002_auth.sql  010_audit_runs_company_link.sql
nginx/: auditchain.conf
scripts/: cleanup_company.py  create_admin.py  download_filings.py  evaluate_accuracy.py  explore_company_facts.py  ingest_filings.py  init_db.py  run_api.py  test_audit_repository.py  test_auth_integration.py  test_collector_agent.py  test_collector_node.py  test_db_connection.py  test_enriched_data.py  test_get_company_tool.py  test_get_financial_summary_tool.py  test_investigation_tools.py  test_list_filings_tool.py  test_openai_connection.py  test_quant_tools.py  test_reconciler_agent.py  test_reconciler_node.py  test_reconciliation_tools.py  test_schemas.py  test_state.py  test_text_ingestion.py  test_workflow.py  test_workflow_final.py  test_workflow_v2.py  test_workflow_v3.py  test_workflow_v4.py  update_duckdns.sh
src/auditchain/agents/: anomaly_detector.py  collector.py  investigator.py  quant_analyst.py  reconciler.py  supervisor.py
src/auditchain/api/: __init__.py  limiter.py  main.py
src/auditchain/auth/: __init__.py  config.py  dependencies.py  models.py  repository.py  schemas.py  service.py
src/auditchain/core/: config.py  logging.py
src/auditchain/data/: audit_repository.py  database.py  ingestion.py  ingestion_repository.py  known_fraud_cases.py  models.py  repositories.py  sec_models.py  text_ingestion.py
src/auditchain/graph/: nodes.py  state.py  workflow.py
src/auditchain/schemas/: components.py  enums.py  ingestion.py  reports.py
src/auditchain/tools/: financial_data.py  investigation.py  quantitative.py  reconciliation.py  schemas.py  structured_output.py
src/auditchain/utils/: sec_client.py
(+37 files in other folders)
